# CDS_GUARD

./: .gitignore  README.md
CDSGateway/: CMakeLists.txt  current_dirty_word.txt  install_for_dependency.sh  install_qt.sh  resources.qrc  setup_qt_env.sh  test2.docx  test2_result.docx  test3.hwpx  test4.docx  test_result.docx  test_result3.hwpx  대통령기록관_최근_월남_사태_II급 비밀.txt
CDSGateway/include/: CdsGateway.hpp  CdsGatewayDiscovery.hpp  CdsGuardOs.hpp  DocumentLabelingDialog.hpp  DoubleArrayTrie.hpp  FilteringInterface.hpp  LoggingPage.hpp  MainWindow.hpp  MiniZipRAII.hpp  ParseZip.hpp  PolicyPage.hpp  ProxyProtocol.hpp
CDSGateway/src/: CdsGateway.cpp  CdsGatewayDiscovery.cpp  DocumentLabelingDialog.cpp  DoubleArrayTrie.cpp  FilteringInterface.cpp  LoggingPage.cpp  MainWindow.cpp  MiniZipRAII.cpp  ParseZip.cpp  PolicyPage.cpp  main.cpp
CDSGuardSub/: CMakeLists.txt  GuardL2 squence.md  README.md  install dependency.sh
CDSGuardSub/include/: CdsGuardServer.hpp  GuardL2.hpp  RecvMode.h  SendMode.h  Utils.hpp
CDSGuardSub/src/: GuardL2.cpp  RecvMode.cpp  SendMode.cpp  main.cpp
CDSGuardSub/test/: README.md  TestEncryptSend.cpp  TestRawSend.cpp  recv_test.sh  send_test.sh  udp_listener.py
FileTransferAppSub/: CMakeLists.txt  resources.qrc  test4.hwpx
FileTransferAppSub/include/: CdsGatewayFinder.hpp  ProxyProtocol.hpp  TransferController.hpp
FileTransferAppSub/qml/: App.qml  Constants.qml  Screen01.qml
FileTransferAppSub/src/: CdsGatewayDiscovery.cpp  TransferController.cpp  main.cpp
PacketProcessor/: CMakeLists.txt
PacketProcessor/include/: PacketBuffer.hpp
PacketProcessor/include/common/: Debug.h
PacketProcessor/include/encryption/: ARIAAlgorithm.h  ARIAReference.h
PacketProcessor/include/protocol/: EncryptionModule.h  IProtocolModule.h  PaddingModule.h  ProtocolEngine.h  ShiftModule.h
PacketProcessor/include/transport/: ISocketTransport.h  L2SocketTransport.h  L3SocketTransport.h
PacketProcessor/src/: PacketBuffer.cpp  main.cpp
PacketProcessor/src/encryption/: ARIAAlgorithm.cpp  ARIAReference.cpp
PacketProcessor/src/protocol/: EncryptionModule.cpp  PaddingModule.cpp  ProtocolEngine.cpp  ShiftModule.cpp
PacketProcessor/src/transport/: L2SocketTransport.cpp  L3SocketTransport.cpp  README.md
PacketProcessor/tests/: ARIAAlgorithmTest.cpp  CMakeLists.txt
PacketTransport/include/: L2SocketTransport.h  L3SocketTransport.h
PacketTransport/src/: cds_high.cpp  cds_low.cpp  gateway.cpp
